styling changes to sign in area

--- a/src/Navbar.scss
+++ b/src/Navbar.scss
@@ -53,6 +53,10 @@ $offwhite: #cccccc;
   align-items: center;
 }
 
+.signin {
+  cursor: pointer;
+}
+
 .signin-area {
   display: flex;
   flex-direction: row;
