--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,7 @@ body {
   display: flex;
   flex-direction: column;
   font-size: 25px;
-  justify-content: center;
+  // justify-content: center;
   min-height: 100vh;
 }
 
@@ -64,7 +64,6 @@ body {
   width: 100px;
   cursor: pointer;
   transition: 1s;
-  margin-top: 20px;
 }
 
 .filter-buttons:hover {
@@ -81,6 +80,7 @@ body {
   width: 50%;
   margin: auto;
   margin-bottom: 25px;
+  margin-top: 20px;
 }
 
 .header-app {
