--- a/src/App.scss
+++ b/src/App.scss
@@ -338,6 +338,23 @@ body {
     justify-content: flex-start;
     margin: 0;
     border-bottom: 0;
+    width: 80vw;
+    flex-direction: column;
+  }
+
+  .park-thumbnail {
+    margin: 0;
+    width: 325px;
+    height: 300%;
+    border-radius: 0;
+    position: absolute;
+  }
+
+  .mob-img {
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
+    position: relative;
   }
 
   .desc {
